--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
           <div class="overlay-genre">Video Game</div>
           <div class="overlay-title">Vampire Survivors</div>
         </div>
-<!--        <div class="card" data-video="https://www.youtube.com/embed/YQXp2gEoevs">-->
-<!--          <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt="Your Name poster">-->
-<!--          <div class="overlay-genre">Video Game</div>-->
-<!--          <div class="overlay-title">Nova Island</div>-->
-<!--        </div>-->
+        <div class="card" data-video="https://www.youtube.com/embed/YQXp2gEoevs">
+          <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co30qj.jpg" alt="Your Name poster">
+          <div class="overlay-genre">Video Game</div>
+          <div class="overlay-title">Nova Island</div>
+        </div>
         <div class="card" data-video="">
         	<a href="https://sadewoo.tumblr.com/post/732936987201404928/post-animation-little-goody-two-shoes-trailer">
           <img src="https://m.media-amazon.com/images/M/MV5BZjkwNDkwMzEtZDZhZC00MGI1LTk0YmUtMzE0NWUzZjdlYjM1XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg" alt="Your Name poster">
@@ -145,11 +145,11 @@
           <div class="overlay-genre">Cartoon</div>
           <div class="overlay-title">I Heart Arlo</div>
         </div>
-<!--        <div class="card" data-video="https://www.youtube.com/embed/00_sb0h2mRQ">-->
-<!--          <img src="https://resizing.flixster.com/l-_w1KP9x9U4KRTaKSF9i3_FjtU=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p21364888_b_v8_aa.jpg" alt="Your Name poster">-->
-<!--          <div class="overlay-genre">Cartoon</div>-->
-<!--          <div class="overlay-title">Smiling Friends Season 2</div>-->
-<!--        </div>-->
+        <div class="card" data-video="https://www.youtube.com/embed/00_sb0h2mRQ">
+          <img src="https://resizing.flixster.com/l-_w1KP9x9U4KRTaKSF9i3_FjtU=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p21364888_b_v8_aa.jpg" alt="Your Name poster">
+          <div class="overlay-genre">Cartoon</div>
+          <div class="overlay-title">Smiling Friends Season 2</div>
+        </div>
         
       </div>
     </div>
