--- a/pages/scripts.html
+++ b/pages/scripts.html
@@ -22,6 +22,7 @@
 <p class="content-space"></p>
 
 <div class="social-list">
+
   <a class="social-btn" href="https://sadewoo.gumroad.com/l/SakugaGP">
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/110px-Python-logo-notext.svg.png?20250701090410" alt="Gumroad">
     <h1>SakugaGP Addon</h1>
@@ -31,7 +32,13 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/110px-Python-logo-notext.svg.png?20250701090410" alt="Gumroad">
     <h1>SakugaKR Plugin</h1>
   </a>
+  
+  <a class="social-btn" href="Kertas/index.html">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Crystal_looknfeel.png" alt="Kertas">
+    <h1>Kertas</h1>
   </a>
+  
+  
 </div>
 
 
