--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body>
+<body id="dabody">
   <div id="bar">
    <div class="group">
     <div class="group">
