--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -33,12 +33,16 @@
          <!-- end of group -->
          <div class="group">
             <button id="brush">✏️</button>
-            <button id="add">📝</button>
+            <button id="add">➕</button>
             <button id="clr">🗑️</button>
             <button id="select">🔲</button>
             <button id="copy">📋</button>
             <button id="cut">✂️</button>
             <button id="paste">🕹️</button>
+            <button id="swapPrev">⇇</button>
+           <button id="swapNext">⇉</button>
+
+
          </div>
          <div class="group">
             <label><input id="sz" type="range" min="2" max="50" value="12"></label>
