--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -39,11 +39,11 @@
             <button id="paste">🕹️</button>
             <button id="swapPrev">⇇</button>
            <button id="swapNext">⇉</button>
-<!--         <div class="group">-->
+         <div class="group">
             <button id="pan">✋</button>
             <button id="zoomIn">➕</button>
             <button id="zoomOut">➖</button>
-<!--         </div>-->
+         </div>
 
 <!--         </div>-->
          <div class="group">
