--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -47,8 +47,10 @@
 
 <!--         </div>-->
          <div class="group">
+         <form>
             <label><input id="sz" type="range" min="2" max="50" value="12"></label>
             <label><input id="op" type="range" min="0.1" max="1" step="0.05" value="1"></label>
+            </form>
          </div>
 
       </div>
