--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -10,8 +10,8 @@
       <div id="bar">
       <div class="group">
 <!--         <div class="group">-->
-            <button id="export">⬆️</button>
-            <button id="import">⬇️</button>
+            <button id="export">💾</button>
+            <button id="import">📂</button>
             <button id="pdf">📄</button>
             <button id="save">📸</button>
 <!--         </div>-->
@@ -23,17 +23,17 @@
 <!--         </div>-->
 <!--         <div class="group">-->
             <input id="col" type="color" value="#000000">
-            <button id="black" style="color:black">BL</button>
-            <button id="white" style="color:black;">WH</button>
-            <button id="red" style="color:red">R</button>
-            <button id="green" style="color:green">G</button>
-            <button id="blue" style="color:blue">B</button>
+<!--            <button id="black" style="color:black">BL</button>-->
+<!--            <button id="white" style="color:black;">WH</button>-->
+<!--            <button id="red" style="color:red">R</button>-->
+<!--            <button id="green" style="color:green">G</button>-->
+<!--            <button id="blue" style="color:blue">B</button>-->
 <!--         </div>-->
 <!--         <div class="group">-->
-            <button id="brush">✏️</button>
+            <button id="brush">Pen</button>
             <button id="add">➕</button>
             <button id="clr">🗑️</button>
-            <button id="select">SEL</button>
+            <button id="select">Select</button>
             <button id="copy">📋</button>
             <button id="cut">✂️</button>
             <button id="paste">🕹️</button>
