--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -31,12 +31,12 @@
 <!--         </div>-->
 <!--         <div class="group">-->
             <button id="brush">Pen</button>
-            <button id="add">➕</button>
-            <button id="clr">🗑️</button>
+            <button id="add">New Page</button>
+            <button id="clr">Clear</button>
             <button id="select">Select</button>
-            <button id="copy">📋</button>
-            <button id="cut">✂️</button>
-            <button id="paste">🕹️</button>
+            <button id="copy">Copy</button>
+            <button id="cut">Cut</button>
+            <button id="paste">Stamp</button>
             <button id="swapPrev">⇇</button>
            <button id="swapNext">⇉</button>
          <div class="group">
