--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -40,7 +40,7 @@
             <button id="swapPrev">⇇</button>
            <button id="swapNext">⇉</button>
          <div class="group">
-            <button id="pan">✋</button>
+            <button id="pan">Pan</button>
             <button id="zoomIn">➕</button>
             <button id="zoomOut">➖</button>
          </div>
