--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -31,7 +31,7 @@
 <!--         </div>-->
 <!--         <div class="group">-->
             <button id="brush">Pen</button>
-            <button id="add">New Page</button>
+            <button id="add">Add Page</button>
             <button id="clr">Clear</button>
             <button id="select">Select</button>
             <button id="copy">Copy</button>
