--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -60,7 +60,13 @@
             <canvas id="bg"></canvas>
             <canvas id="draw"></canvas>
             <canvas id="overlay"></canvas>
+            <div id="canvasLabel"
+       style="position:absolute; top:-25px; right:5px; 
+              font:12px monospace; color:#fff; 
+              background:rgba(0,0,0,0.2); padding:2px 4px; border-radius:3px;">
+  </div>
          </div>
+          
       </div>
       <script src="script.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
