--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -34,8 +34,8 @@
 		         <button id="paste">Stamp</button>
 		         </div>
             <div class="group">
-		         <button id="swapPrev">⇇</button>
-		        <button id="swapNext">⇉</button>
+		         <button id="swapPrev">⇇Reorder</button>
+		        <button id="swapNext">Reorder⇉</button>
            </div>
            
          <div class="group">
