--- a/pages/scripts.html
+++ b/pages/scripts.html
@@ -38,6 +38,10 @@
     <h1>Kertas</h1>
   </a>
   
+  <a class="social-btn" href="XDTS-Editor/index.html">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/LibreOffice_7.5_Calc_Icon.svg/640px-LibreOffice_7.5_Calc_Icon.svg.png" alt="Kertas">
+    <h1>XDTS Editor</h1>
+  </a>
   
 </div>
 
