--- a/pages/Kertas/index.html
+++ b/pages/Kertas/index.html
@@ -15,7 +15,7 @@
             <button id="import">📂</button>
             <button id="pdf">📄</button>
             <button id="save">📸</button>
-            <input id="url" type="text" placeholder="Image URL">
+            <input id="url" type="text" value="https://traditionalanimatorindonesia.github.io/pages/Templates/assets/AnimeGO_Storyboard.png" placeholder="Image URL">
             <button id="load">📥</button>
             <button onclick="window.open('https://spikysaurus.github.io', '_blank');" id="home">🏠</button>
             <button onclick="window.open('https://traditionalanimatorindonesia.github.io/pages/Templates/index.html', '_blank');" id="templates">📜</button>
