--- a/pages/Stopmo/index.html
+++ b/pages/Stopmo/index.html
@@ -18,13 +18,16 @@
   <div class="controls">
   FPS:<input type="number" id="fps" value="24" min="1" max="60">
   Zoom:<input type="range" id="zoom" min="10" max="50" value="20">
-  <button id="play">▶</button>
-  <button id="stop">⏹</button>
-  <button id="add">➕ Track</button>
-  <button id="delete">🗑 Remove Selected</button>
-  <button id="capture">📷 Capture</button>
-  <button id="toggleCam">👁 Toggle Camera</button>
-  <button id="exportGif">💾 Export GIF</button>
+  <button id="toggleCamera">Switch Camera</button>
+  <button id="toggleCam">Hide Camera</button>
+  
+  <button id="play">Play</button>
+  <button id="stop">Stop</button>
+  <button id="add">Add Track</button>
+  <button id="delete">Remove Selected</button>
+  <button id="capture">Capture</button>
+  
+  <button id="exportGif">Export GIF</button>
 
 </div>
 </center>
