--- a/pages/Stopmo/index.html
+++ b/pages/Stopmo/index.html
@@ -24,6 +24,9 @@
   <button id="play">Play</button>
   <button id="stop">Stop</button>
   <button id="add">Add Track</button>
+  <button id="orderUp">Order Up</button>
+<button id="orderDown">Order Down</button>
+
   <button id="delete">Remove Selected</button>
   <button id="capture">Capture</button>
   
