--- a/pages/Stopmo/index.html
+++ b/pages/Stopmo/index.html
@@ -10,36 +10,48 @@
   <!-- Preview area -->
 <!--  <div style="position:fixed;top:0;">-->
   <center>
+  <button id="exportGif" style="margin-top:10px;margin-bottom:10px;">Export GIF</button>
   <div id="preview">
   <video id="camera" autoplay playsinline></video>
 </div>
-
-
+<div style="margin-top:10px;">
+<label id="timecode" >total duration will be shown here</label>
+</div>
+</div>
   <div class="controls">
-  FPS:<input type="number" id="fps" value="24" min="1" max="60">
-  Zoom:<input type="range" id="zoom" min="10" max="50" value="20">
+  <label style="position:relative;top:5px;">FPS : </label><input type="number" id="fps" value="24" min="1" max="60">
   <button id="toggleCamera">Switch Camera</button>
   <button id="toggleCam">Hide Camera</button>
+  </div>
   
+  <div class="controls">
+  
+  <button id="add">Add Track</button>
   <button id="play">Play</button>
   <button id="stop">Stop</button>
-  <button id="add">Add Track</button>
+  
   <button id="orderUp">Order Up</button>
 <button id="orderDown">Order Down</button>
-
   <button id="delete">Remove Selected</button>
-  <button id="capture">Capture</button>
+  <button id="exposeMinus">- Exposure</button>
+  <button id="exposePlus">+ Exposure</button>
+  <button id="moveLeft">← Move</button>
+  <button id="moveRight">→ Move</button>
   
-  <button id="exportGif">Export GIF</button>
-
-</div>
+  <button id="capture">Capture</button>
+  <div>
+  
+  </div>
+<!--</div>-->
 </center>
 <!--</div>-->
+<div class="timeline" id="tracks">
+ <label style="margin-left:10px;">Zoom : </label><input type="range" id="zoom" min="10" max="100" value="20" style="position:relative;top:5px;">
+  <div id="playhead" class="playhead"></div>
+  <!-- tracks will be rendered here -->
+</div>
 
-  <!-- Timeline -->
-  <div class="timeline" id="tracks">
-    <div id="playhead" class="playhead"></div>
-  </div>
+
 
 
   <!-- Hidden video element for camera -->
