--- a/pages/scripts.html
+++ b/pages/scripts.html
@@ -33,14 +33,19 @@
     <h1>SakugaKR Plugin</h1>
   </a>
   
+  <a class="social-btn" href="XDTS-Editor/index.html">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/LibreOffice_7.5_Calc_Icon.svg/640px-LibreOffice_7.5_Calc_Icon.svg.png" alt="XDTS Editor">
+    <h1>XDTS Editor</h1>
+  </a>
+  
   <a class="social-btn" href="Kertas/index.html">
     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c0/Crystal_looknfeel.png" alt="Kertas">
     <h1>Kertas</h1>
   </a>
   
-  <a class="social-btn" href="XDTS-Editor/index.html">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/LibreOffice_7.5_Calc_Icon.svg/640px-LibreOffice_7.5_Calc_Icon.svg.png" alt="Kertas">
-    <h1>XDTS Editor</h1>
+  <a class="social-btn" href="Animasikan/index.html">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Comedy_film_icon_2.svg/640px-Comedy_film_icon_2.svg.png" alt="Animasikan">
+    <h1>Animasikan</h1>
   </a>
   
 </div>
