--- a/pages/Animasikan/index.html
+++ b/pages/Animasikan/index.html
@@ -35,13 +35,13 @@
   <button id="add">Add Track</button>
   
   
-  <button id="moveLeft">Move Left</button>
-  <button id="moveRight">Move Right</button>
-  <button class="tl_btn" id="orderUp">Move Up</button>
-<button class="tl_btn" id="orderDown">Move Down</button>
+  <button id="moveLeft">Move Frame Left</button>
+  <button id="moveRight">Move Frame Right</button>
+  <button class="tl_btn" id="orderUp">Move Track Up</button>
+<button class="tl_btn" id="orderDown">Move Track Down</button>
  <button class="tl_btn" id="delete">Delete</button>
- <button class="tl_btn" id="exposeMinus">Decrease</button>
-  <button class="tl_btn" id="exposePlus">Increase</button>
+ <button class="tl_btn" id="exposeMinus">- Exposure</button>
+  <button class="tl_btn" id="exposePlus">+ Exposure</button>
 
   
   <div>
