--- a/pages/Animasikan/index.html
+++ b/pages/Animasikan/index.html
@@ -10,8 +10,8 @@
   <!-- Preview area -->
 <!--  <div style="position:fixed;top:0;">-->
   <center>
-  <button id="toggleCamera">Switch Camera</button>
-  <button id="toggleCam">Hide Camera</button>
+  <button id="toggleCamera">Switch Cam</button>
+  <button id="toggleCam">Hide Cam</button>
   <label style="position:relative;top:1px;">FPS : </label><input type="number" id="fps" value="24" min="1" max="60">
   <button id="exportGif" style="margin-top:10px;margin-bottom:10px;">Export GIF</button>
   <div id="preview">
