--- a/pages/Animasikan/index.html
+++ b/pages/Animasikan/index.html
@@ -40,8 +40,8 @@
   <button class="tl_btn" id="orderUp">Move Track Up</button>
 <button class="tl_btn" id="orderDown">Move Track Down</button>
  <button class="tl_btn" id="delete">Delete</button>
- <button class="tl_btn" id="exposeMinus">- Exposure</button>
-  <button class="tl_btn" id="exposePlus">+ Exposure</button>
+ <button class="tl_btn" id="exposeMinus">- Exp</button>
+  <button class="tl_btn" id="exposePlus">+ Exp</button>
 
   
   <div>
