--- a/pages/Animasikan/index.html
+++ b/pages/Animasikan/index.html
@@ -15,7 +15,7 @@
   <button id="toggleCam">Hide Cam</button>
   
   <button id="exportGif" style="margin-top:10px;margin-bottom:10px;">Export GIF</button>
-  <button id="exportZip">PNGs (.zip)</button>
+<!--  <button id="exportZip">PNGs (.zip)</button>-->
 
   <div id="preview">
   <video id="camera" autoplay playsinline></video>
