--- a/pages/Animasikan/index.html
+++ b/pages/Animasikan/index.html
@@ -7,6 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
+
+
+<div id="levelStripPanel">
+  <div class="level-strip-header">Strip Previews</div>
+  <div class="level-strip-content" id="levelStripContent"></div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!-- Preview area -->
 <!--  <div style="position:fixed;top:0;">-->
   <center>
@@ -30,6 +49,7 @@
   
   </div>
   
+  
   <div class="controls">
   
   
@@ -45,7 +65,7 @@
  <button class="tl_btn" id="delete">Delete</button>
  <button class="tl_btn" id="exposeMinus">- Exp</button>
   <button class="tl_btn" id="exposePlus">+ Exp</button>
-
+<button id="levelStripBtn">🎞️</button>
   
   <div>
   
