--- a/pages/Animasikan/index.html
+++ b/pages/Animasikan/index.html
@@ -14,18 +14,6 @@
   <div class="level-strip-content" id="levelStripContent"></div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
   <!-- Preview area -->
 <!--  <div style="position:fixed;top:0;">-->
   <center>
@@ -65,7 +53,7 @@
  <button class="tl_btn" id="delete">Delete</button>
  <button class="tl_btn" id="exposeMinus">- Exp</button>
   <button class="tl_btn" id="exposePlus">+ Exp</button>
-<button id="levelStripBtn">🎞️</button>
+
   
   <div>
   
@@ -73,7 +61,8 @@
 <!--</div>-->
 </center>
 <!--</div>-->
-<label style="margin-left:10px;">🔍 </label><input type="range" id="zoom" min="10" max="100" value="20" style="position:relative;top:5px;width:100px;">
+<button style="margin-left:10px;"id="levelStripBtn">🎞️</button>
+<label >🔍 </label><input type="range" id="zoom" min="10" max="100" value="20" style="position:relative;top:5px;width:100px;">
 
 <div style="position:relative;top:-25px;">
 <div style="position:absolute;right:0;">
