--- a/pages/scripts.html
+++ b/pages/scripts.html
@@ -48,6 +48,11 @@
     <h1>Animasikan</h1>
   </a>
   
+  <a class="social-btn" href="ImageSequenceDeduplicator/index.html">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/250px-JavaScript-logo.png" alt="Animasikan">
+    <h1>Image Sequence Deduplicator</h1>
+  </a>
+  
 </div>
 
 
