--- a/pages/ImageSequenceDeduplicator/index.html
+++ b/pages/ImageSequenceDeduplicator/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <head>
   <meta charset="UTF-8">
-  <title>Image Sequences Deduplicator</title>
+  <title>Image Sequence Deduplicator</title>
   <style>
   html, body {
   margin: 0;
