--- a/pages/ImageSequenceDeduplicator/index.html
+++ b/pages/ImageSequenceDeduplicator/index.html
@@ -56,6 +56,7 @@
   <center><br>
   Upload your image Sequence<br>(eg: A_0001.png, A_0002.png, etc..)<br>
   Wait until progress is complete<br>
+  it'll scan your image sequence and find images with the same pixels and remove the duplicates, leaving only the keyframes.<br>
   File will be saved as "unique_images.zip" in your download folder<br>
   The deduplication process and .zip download are runs locally.
 </center>
