--- a/pages/scripts.html
+++ b/pages/scripts.html
@@ -49,7 +49,7 @@
   </a>
   
   <a class="social-btn" href="ImageSequenceDeduplicator/index.html">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/250px-JavaScript-logo.png" alt="Animasikan">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/File_equals_icon.svg/120px-File_equals_icon.svg.png" alt="Animasikan">
     <h1>Image Sequence Deduplicator</h1>
   </a>
   
