--- a/pages/links.html
+++ b/pages/links.html
@@ -35,7 +35,7 @@
   </a>
 
   <a class="social-btn" href="https://sadewoo.newgrounds.com/" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/110px-Python-logo-notext.svg.png?20250701090410" alt="Newgrounds">
+    <img src="https://cdn2.steamgriddb.com/icon/03271d336bfb3035b0d8bd034c6b2f76/32/256x256.png" alt="Newgrounds">
     <h1>NEWGROUNDS</h1>
   </a>
 
