--- a/pages/ImageSequenceDeduplicator/index.html
+++ b/pages/ImageSequenceDeduplicator/index.html
@@ -50,7 +50,7 @@
   <script src="../../assets/js/FileSaver.min.js"></script>
 </head>
 <body>
-  <div id="dropZone">Drop your images here or click to select</div>
+  <div id="dropZone">Drop your images here or click to browse</div>
   <input type="file" id="fileInput" multiple accept="image/*" style="display:none;">
   <div id="progressBar"><div></div></div>
   <center><br>
