--- a/pages/ImageSequenceDeduplicator/index.html
+++ b/pages/ImageSequenceDeduplicator/index.html
@@ -58,7 +58,9 @@
   Wait until progress is complete<br>
   it'll scan your image sequence and find images with the same pixels and remove the duplicates, leaving only the keyframes.<br>
   File will be saved as "unique_images.zip" in your download folder<br>
-  The deduplication process and .zip download are runs locally.
+  The upload/deduplication process and .zip download are runs locally.<br>
+<br>
+<img src="https://64.media.tumblr.com/2d7d572821dc3d8d38a823d645e2114c/tumblr_n1u9o5RBPV1rjxyrgo6_250.gifv">
 </center>
   <script>
     let uniqueFiles = [];
