--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </a>
     </li>
     <li>
-      <a href="pages/scripts.html" class="nav-button">
+      <a href="pages/tools.html" class="nav-button">
         <img src="assets/image/coin_python.png">
 <!--        <span><img width=100px src=""></span>-->
       </a>
